--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
+    <link
+      rel="stylesheet"
+      href="//fonts.googleapis.com/css?family=Barlow:400,600,700"
+    />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossOrigin="anonymous"
+    />
+    <title>Fishub</title>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
